# 3d_graph_project

./: CMakeLists.txt  main.cpp
headers/: camera.h  interface.h  matrix.h  object.h  scene.h
sources/: camera.cpp  object.cpp  scene.cpp
